# bench-parmesan

./: .gitignore  00-loc_files-to-frontend.sh  01-rem_compile-at-frontend.sh  01_files-to-frontend.sh  01_send-bench-to-meta.sh  01_send-to-frontend.sh  02-rem_bench-parmesan_elwe_submit-via-qsub.sh  02-rem_bench-parmesan_kirke_submit-via-qsub.sh  02-rem_bench-parmesan_samson_submit-via-qsub.sh  02-rem_bench-parmesan_submit-via-qsub.sh  02_compile-at-frontend.sh  02_compile-bench-parmesan_submit-via-qsub.sh  02_compile-parmesan_submit-via-qsub.sh  03_bench-parmesan_kirke_submit-via-qsub.sh  03_bench-parmesan_samson_submit-via-qsub.sh  03_bench-parmesan_submit-via-qsub.sh  03_copy-bench-parmesan_submit-via-qsub.sh  Cargo.toml  Makefile  README.md  _profile-at-frontend  bench-parmesan-remote.sh  compile-parmesan-remote.sh  measure-cpu-load_notes.md  xx_processor-info.sh
scripts/: 2d-plot-dstat.sh  2d-plot.sh  archive-self-HEAD.sh  plot-dstat.sh  plot-top.sh  plot.sh  preproc-cpu-stats.rb
scripts/dstat/: 2d-plot.sh  plot-dstat.sh
src/: main.rs
