[package]
name = "bench-parmesan"
version = "0.0.13"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parmesan = { path = "../parmesan" }
colored = "^2.0.0"
rayon = "^1.5.1"
chrono = "^0.4.0"
concrete = { version = "^0.2.0-beta", features = ["integers", "shortints", "serde"]}
bincode = "^1.3.3"

[features]
pbs         = []
add         = []
sgn         = ["add"]
round       = []
max         = []
mul         = ["mul_light"]
squ         = ["squ_light"]
mul_light   = []
squ_light   = []
scm         = []
nn          = []
all         = ["pbs", "add", "sgn", "round", "max", "mul", "squ", "scm", "nn"]
all_light   = ["pbs", "add", "sgn", "round", "max", "mul_light", "squ_light", "scm"]
default     = ["c4"]
measure     = []                                # measure is needed for measure_duration! which is used instead of simple_duration! in cases where there is no measure_duration! inside the block
log_ops     = ["measure", "parmesan/log_ops"]
# Concrete precisions
c4          = []
c8          = []
c16         = []
c32         = []
