[package]
name = "bench-parmesan"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parmesan = "^0.1"
# parmesan = { git = "https://github.com/fakub/parmesan" }
parmesan = { path = "../parmesan" }
concrete = { version = "^0.2.0-beta.2", features = ["integers", "serde"] }
bincode = "^1.3.3"
colored = "^2.0.0"
rayon = "^1.5.1"
chrono = "^0.4.0"

[features]
default     = []
# Input precision
4bit        = []
8bit        = []
16bit       = []
32bit       = []
# Operations
pbs         = []
add         = []
sgn         = ["add"]
round       = []
max         = []
mul         = ["mul_light"]
squ         = ["squ_light"]
mul_light   = []
squ_light   = []
scm         = []
nn          = []
all         = ["pbs", "add", "sgn", "round", "max", "mul", "squ", "scm"]
all_nn      = ["all", "nn"]
all_light   = ["pbs", "add", "sgn", "round", "max", "mul_light", "squ_light", "scm"]
# Measurements
measure     = []    # measure is needed for measure_duration! which is used instead of simple_duration! in cases where there is no measure_duration! inside the block
log_ops     = ["measure", "parmesan/log_ops"]
seq_analyze = ["parmesan/seq_analyze"]
# Concrete
concrete    = []
